# plugin-system

./: .gitignore  .travis.yml  Cargo.toml  README.md
.vim/: template.rs
example/: Cargo.toml
example/core/: Cargo.toml
example/core/src/: lib.rs
example/plugins/bar/: Cargo.toml
example/plugins/bar/src/: lib.rs
example/plugins/foo/: Cargo.toml
example/plugins/foo/src/: lib.rs
example/src/: main.rs
example/usage/: Cargo.toml
example/usage/src/: main.rs
plugin-runtime/: Cargo.toml
plugin-runtime-codegen/: Cargo.toml
plugin-runtime-codegen/src/: lib.rs
plugin-runtime/src/: lib.rs
plugin-system/: Cargo.toml
plugin-system/src/: lib.rs
