[package]
name = "plugin-system-example"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/plugin-system.git"
homepage = "https://github.com/SOF3/plugin-system"

[dependencies.plugin-system]
version = "0.1.0"
path = "../plugin-system"
