[package]
name = "plugin-runtime-codegen"
version = "0.1.1"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/plugin-system.git"
homepage = "https://github.com/SOF3/plugin-system"
description = "proc-macro generation for plugin-system runtime"

[lib]
proc-macro = true

[dependencies]
darling = "0.9.0"
proc-macro2 = "0.4.30"
quote = "0.6.13"
syn = {version = "0.15.42", features = ["full"]}
