[package]
name = "plugin-runtime-codegen"
version = "0.1.1"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/plugin-system.git"
homepage = "https://github.com/SOF3/plugin-system"
description = "proc-macro generation for plugin-system runtime"

[lib]
proc-macro = true

[dependencies]
darling = "0.11.0"
proc-macro2 = "1.0.6"
quote = "1.0.2"
syn = { version = "1.0.8", features = ["full"] }
